--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "watchman watch-del-all && react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -15,7 +15,9 @@
     "@gluestack-ui/themed": "^1.0.11",
     "body-parser": "^1.20.2",
     "buffer": "^6.0.3",
+    "crypto-es": "^2.1.0",
     "crypto-js": "^4.1.1",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "js-sha256": "^0.9.0",
     "node-forge": "^1.3.1",
@@ -24,6 +26,8 @@
     "react-native": "0.72.3",
     "react-native-nfc-manager": "^3.14.11",
     "react-native-passport-reader": "^1.0.3",
+    "react-native-quick-base64": "^2.0.8",
+    "react-native-quick-crypto": "^0.6.1",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
@@ -43,7 +47,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.7",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.4.1",
     "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
